Implement Gateway routes for all methods + add auth middleware
